[tool.poetry]
name = "botgames"
version = "0.1.0"
description = ""
authors = ["vasilisk7258 <ertybasevk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.15.0"
logging = "^0.4.9.6"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
pydantic-settings = "^2.6.1"
nltk = "^3.9.1"
pyspellchecker = "^0.8.2"
requests = "^2.32.3"
pymorphy2 = "^0.9.1"
bs4 = "^0.0.2"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
